fixes spacing on main content

--- a/src/components/ui/Main/Main.scss
+++ b/src/components/ui/Main/Main.scss
@@ -7,6 +7,10 @@
   position: relative;
 }
 
+.mainContent{
+  margin-top: 40%;
+}
+
 .connect{
   position: absolute;
   top:0;
