--- a/src/components/ui/Main/Toolbar/Toolbar.scss
+++ b/src/components/ui/Main/Toolbar/Toolbar.scss
@@ -3,7 +3,6 @@
 
 .default {
   display: flex;
-  margin-bottom: 10rem;
   a{
     text-decoration: none;
     font-size: 2.4rem;
